Rename parameters to optional parameters, use nested static class